[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octaclient"
version = "0.1.0"
description = "Lightweight Python client for the Octadesk API (sync-only)"
authors = [ {name = "Your Name", email = "you@example.com"} ]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.23.0",
    "pydantic>=1.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.20.0",
    "pytest-httpx>=0.18.0"
]

[tool.black]
line-length = 88
